--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(49, 44, 44, 0.87);
+  background-color: #a1bdc5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,16 +15,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1f214a;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
+
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -47,7 +44,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #585ba0;
 }
 button:focus,
 button:focus-visible {
@@ -56,13 +53,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #5982a5;
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #272e3c;
   }
 }
